--- a/server/package.json
+++ b/server/package.json
@@ -19,26 +19,26 @@
   "_comment3": "Required by REST API docs only: mustache, showdown",
   "_comment4": "Required by GraphQL API only: apollo-server-koa, graphql, type-graphql",
   "dependencies": {
-    "@apollo/server": "^4.3.3",
+    "@apollo/server": "4.10.1",
     "@as-integrations/koa": "^0.2.1",
-    "@aws-sdk/client-s3": "~3.58.0",
-    "@aws-sdk/client-secrets-manager": "~3.58.0",
-    "@aws-sdk/s3-request-presigner": "~3.58.0",
+    "@aws-sdk/client-s3": "3.525.0",
+    "@aws-sdk/client-secrets-manager": "3.525.0",
+    "@aws-sdk/s3-request-presigner": "3.525.0",
     "@graphql-tools/schema": "9.0.17",
     "@hapi/boom": "~9.1.4",
-    "@sentry/node": "~7.43.0",
-    "@types/koa-bodyparser": "^4.3.10",
+    "@sentry/node": "7.105.0",
+    "@types/koa-bodyparser": "4.3.12",
     "axios": "0.25.0",
-    "bcrypt": "^5.0.1",
+    "bcrypt": "5.1.1",
     "bunyan": "~1.8.15",
-    "class-validator": "0.14.0",
+    "class-validator": "0.14.1",
     "eslint-plugin-n": "^15.6.1",
-    "graphql": "^16.6.0",
+    "graphql": "16.8.1",
     "graphql-depth-limit": "1.1.0",
-    "graphql-ws": "5.12.0",
+    "graphql-ws": "5.15.0",
     "joi-to-swagger": "^6.1.1",
-    "jsonwebtoken": "9.0.0",
-    "koa": "~2.13.4",
+    "jsonwebtoken": "9.0.2",
+    "koa": "2.15.0",
     "koa-bodyparser": "^4.3.0",
     "koa-joi-router": "~8.0.0",
     "koa-jwt": "^4.0.3",
@@ -48,14 +48,14 @@
     "node-gyp": "9.3.1",
     "openapi-types": "^12.0.2",
     "pg-promise": "~10.11.1",
-    "reflect-metadata": "0.1.13",
+    "reflect-metadata": "0.2.1",
     "serverless-http": "~2.7.0",
     "showdown": "~1.9.1",
     "stack-trace": "0.0.10",
     "type-graphql": "2.0.0-beta.1",
     "typedi": "0.10.0",
     "uuid": "~8.3.2",
-    "ws": "8.13.0"
+    "ws": "8.16.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "~2.16.5",
@@ -64,26 +64,26 @@
     "@graphql-codegen/typescript-graphql-request": "~4.3.3",
     "@graphql-codegen/typescript-operations": "~2.2.2",
     "@graphql-codegen/typescript-resolvers": "~2.4.3",
-    "@types/bunyan": "~1.8.8",
-    "@types/graphql-depth-limit": "1.1.3",
+    "@types/bunyan": "1.8.11",
+    "@types/graphql-depth-limit": "1.1.6",
     "@types/jest": "~27.4.0",
     "@types/joi": "~17.2.3",
-    "@types/koa": "~2.13.4",
-    "@types/koa-joi-router": "~8.0.4",
-    "@types/koa-qs": "~2.0.0",
-    "@types/koa-router": "~7.4.4",
-    "@types/mustache": "~4.1.2",
+    "@types/koa": "2.15.0",
+    "@types/koa-joi-router": "8.0.7",
+    "@types/koa-qs": "2.0.3",
+    "@types/koa-router": "7.4.8",
+    "@types/mustache": "4.2.5",
     "@types/node": "~17.0.13",
-    "@types/pg": "~8.6.4",
+    "@types/pg": "8.11.2",
     "@types/showdown": "~1.9.4",
-    "@types/stack-trace": "0.0.29",
+    "@types/stack-trace": "0.0.33",
     "@types/uuid": "~8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.51.0",
     "@typescript-eslint/parser": "^5.51.0",
-    "eslint": "^8.33.0",
+    "eslint": "8.57.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-config-standard": "^17.0.0",
-    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-import": "2.29.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.1.1",
