--- a/worker/package.json
+++ b/worker/package.json
@@ -12,49 +12,49 @@
     "start:prod": "NODE_ENV=production npm run build:prod && node build/index.js"
   },
   "dependencies": {
-    "@hapi/boom": "^10.0.1",
-    "@sentry/node": "^7.57.0",
-    "aws-sdk": "^2.807.0",
-    "axios": "^1.4.0",
-    "bunyan": "^1.8.14",
-    "koa": "^2.13.0",
-    "koa-joi-router": "^8.0.0",
-    "koa-qs": "^3.0.0",
-    "lodash": "^4.17.15",
-    "mustache": "^4.1.0",
-    "pg-promise": "^11.5.0",
-    "serverless-http": "^3.2.0",
-    "showdown": "^2.1.0",
+    "@hapi/boom": "10.0.1",
+    "@sentry/node": "7.105.0",
+    "aws-sdk": "2.1571.0",
+    "axios": "1.6.7",
+    "bunyan": "1.8.15",
+    "koa": "2.15.0",
+    "koa-joi-router": "8.0.0",
+    "koa-qs": "3.0.0",
+    "lodash": "4.17.21",
+    "mustache": "4.2.0",
+    "pg-promise": "10.15.4",
+    "serverless-http": "3.2.0",
+    "showdown": "2.1.0",
     "stack-trace": "0.0.10",
-    "uuid": "^9.0.0"
+    "uuid": "9.0.1"
   },
   "devDependencies": {
-    "@types/bunyan": "~1.8.8",
-    "@types/jest": "~27.4.0",
-    "@types/joi": "~17.2.3",
-    "@types/koa": "~2.13.4",
-    "@types/koa-joi-router": "~8.0.4",
-    "@types/koa-qs": "~2.0.0",
-    "@types/koa-router": "~7.4.4",
-    "@types/mustache": "~4.1.2",
-    "@types/node": "~17.0.13",
-    "@types/pg": "~8.6.4",
-    "@types/showdown": "~1.9.4",
-    "@types/stack-trace": "0.0.29",
-    "@types/uuid": "~8.3.4",
-    "@typescript-eslint/eslint-plugin": "^5.51.0",
-    "@typescript-eslint/parser": "^5.51.0",
-    "eslint": "^8.33.0",
-    "eslint-config-prettier": "^8.6.0",
-    "eslint-config-standard": "^17.0.0",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-promise": "^6.1.1",
-    "jest": "~27.4.7",
-    "prettier": "^2.8.3",
-    "ts-jest": "~27.1.3",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^4.9.5"
+    "@types/bunyan": "1.8.11",
+    "@types/jest": "29.5.12",
+    "@types/joi": "17.2.3",
+    "@types/koa": "2.15.0",
+    "@types/koa-joi-router": "8.0.7",
+    "@types/koa-qs": "2.0.3",
+    "@types/koa-router": "7.4.8",
+    "@types/mustache": "4.2.5",
+    "@types/node": "20.11.24",
+    "@types/pg": "8.11.2",
+    "@types/showdown": "2.0.6",
+    "@types/stack-trace": "0.0.33",
+    "@types/uuid": "9.0.8",
+    "@typescript-eslint/eslint-plugin": "7.1.1",
+    "@typescript-eslint/parser": "7.1.1",
+    "eslint": "8.57.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-config-standard": "17.1.0",
+    "eslint-plugin-import": "2.29.1",
+    "eslint-plugin-node": "11.1.0",
+    "eslint-plugin-prettier": "5.1.3",
+    "eslint-plugin-promise": "6.1.1",
+    "jest": "29.7.0",
+    "prettier": "3.2.5",
+    "ts-jest": "29.1.2",
+    "ts-node-dev": "2.0.0",
+    "typescript": "5.3.3"
   }
 }
