--- a/scripts/helm.yaml
+++ b/scripts/helm.yaml
@@ -135,7 +135,10 @@ full-stack:
         - ip: "${db_database_real_host}/32"
         - fullname: ${taito_project}-${taito_env}-redis
         - fullname: ${taito_project}-${taito_env}-storage
-      livenessDisabled: true # TODO: implement /healthz for worker
+      livenessCommand:
+        - sh
+        - -c
+        - echo TODO implement health check
       db: # For old gcp environments
         useProxy: ${gcp_db_proxy_enabled} # For old gcp environments
         instance: ${taito_zone}:${taito_provider_region}:${db_database_instance} # For old gcp environments
