--- a/www/site/.prettierrc
+++ b/www/site/.prettierrc
@@ -1,5 +1,7 @@
 {
-  "semi": false,
-  "singleQuote": true,
-  "trailingComma": "es5"
+  "printWidth": 80,
+  "trailingComma": "es5",
+  "tabWidth": 2,
+  "semi": true,
+  "singleQuote": true
 }
