--- a/client/package.json
+++ b/client/package.json
@@ -21,8 +21,8 @@
     "uikit:preview": "storybook dev -p 6006",
     "uikit:build": "storybook build",
     "design-system:sync": "npm-run-all -s design-system:tokenize design-system:codegen design-system:format",
-    "design-system:tokenize": "npx figmage tokenize --env ./styled-system/.env",
-    "design-system:codegen": "npx figmage codegen --env ./styled-system/.env",
+    "design-system:tokenize": "figmage tokenize --env ./styled-system/.env",
+    "design-system:codegen": "figmage codegen --env ./styled-system/.env",
     "design-system:format": "prettier --write \"styled-system/tokens/*.ts\"",
     "generate": "npm-run-all -p generate:*",
     "generate:lang": "lingui compile",
@@ -60,7 +60,7 @@
     "@lingui/cli": "4.2.1",
     "@lingui/vite-plugin": "4.2.1",
     "@optimize-lodash/rollup-plugin": "4.0.3",
-    "@pandacss/dev": "0.11.1",
+    "@pandacss/dev": "0.39.1",
     "@rollup/plugin-strip": "3.0.2",
     "@storybook/addon-essentials": "7.0.12",
     "@storybook/addon-interactions": "7.0.12",
@@ -92,6 +92,7 @@
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-storybook": "0.6.12",
+    "figmage": "0.13.1",
     "jsdom": "22.0.0",
     "npm-run-all": "4.1.5",
     "pg-promise": "10.11.1",
@@ -153,22 +154,17 @@
         {
           "name": "spacing",
           "type": "width",
-          "nodeId": "110:694"
-        },
-        {
-          "name": "sizes",
-          "type": "height",
-          "nodeId": "102:7"
+          "nodeName": "Figmage - Spacing"
         },
         {
           "name": "radii",
           "type": "radius",
-          "nodeId": "102:8"
+          "nodeName": "Figmage - Radii"
         },
         {
           "name": "icons",
           "type": "svg",
-          "nodeId": "102:2"
+          "nodeName": "Figmage - Icons"
         }
       ]
     },
@@ -176,6 +172,10 @@
       "defaults": {
         "filetype": "ts",
         "tokenCase": "camel"
+      },
+      "spacing": {
+        "filetype": "json",
+        "tokenCase": "lower"
       },
       "icons": {
         "filetype": "svg",
