--- a/client/package.json
+++ b/client/package.json
@@ -58,7 +58,6 @@
     "@graphql-codegen/typescript-operations": "3.0.4",
     "@graphql-codegen/typescript-react-apollo": "3.3.7",
     "@lingui/cli": "4.2.1",
-    "@lingui/swc-plugin": "4.0.2",
     "@lingui/vite-plugin": "4.2.1",
     "@optimize-lodash/rollup-plugin": "4.0.3",
     "@pandacss/dev": "0.11.1",
@@ -68,7 +67,6 @@
     "@storybook/addon-links": "7.0.12",
     "@storybook/react-vite": "7.0.12",
     "@storybook/theming": "7.0.12",
-    "@swc/core": "1.3.58",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "14.0.0",
     "@testing-library/user-event": "14.4.3",
@@ -80,9 +78,9 @@
     "@types/react-router-dom": "5.3.3",
     "@typescript-eslint/eslint-plugin": "5.59.1",
     "@typescript-eslint/parser": "5.59.1",
-    "@vitejs/plugin-react-swc": "3.3.2",
+    "@vitejs/plugin-react": "4.2.1",
     "@vitest/coverage-c8": "0.31.1",
-    "cypress": "12.16.0",
+    "babel-plugin-macros": "3.1.0",
     "eslint": "8.39.0",
     "eslint-config-prettier": "8.8.0",
     "eslint-config-standard": "17.0.0",
@@ -102,22 +100,11 @@
     "source-map-explorer": "2.5.3",
     "storybook": "7.0.12",
     "storybook-dark-mode": "3.0.0",
-    "typescript": "5.0.4",
-    "vite": "4.3.9",
+    "typescript": "5.4.5",
+    "vite": "5.2.11",
     "vite-plugin-favicon2": "1.1.5",
-    "vite-tsconfig-paths": "4.2.0",
-    "vitest": "0.31.1"
-  },
-  "overrides": {
-    "@vitejs/plugin-react-swc": {
-      "@swc/core-darwin-arm64": "1.3.58",
-      "@swc/core-darwin-x64": "1.3.58",
-      "@swc/core-linux-arm-gnueabihf": "1.3.58",
-      "@swc/core-linux-arm64-gnu": "1.3.58",
-      "@swc/core-linux-arm64-musl": "1.3.58",
-      "@swc/core-linux-x64-gnu": "1.3.58",
-      "@swc/core-linux-x64-musl": "1.3.58"
-    }
+    "vite-tsconfig-paths": "4.3.2",
+    "vitest": "1.6.0"
   },
   "engines": {
     "node": ">=18.16",
