--- a/client/package.json
+++ b/client/package.json
@@ -42,14 +42,14 @@
     "history": "5.3.0",
     "lodash": "4.17.21",
     "react": "18.2.0",
-    "react-aria": "3.24.0",
-    "react-aria-components": "1.0.0-alpha.4",
+    "react-aria": "3.33.1",
+    "react-aria-components": "1.2.1",
     "react-dom": "18.2.0",
     "react-hot-toast": "2.4.0",
     "react-merge-refs": "1.1.0",
     "react-router": "6.10.0",
     "react-router-dom": "6.10.0",
-    "react-stately": "3.22.0",
+    "react-stately": "3.31.1",
     "react-use": "17.4.0"
   },
   "devDependencies": {
