--- a/client/package.json
+++ b/client/package.json
@@ -103,6 +103,7 @@
     "typescript": "5.4.5",
     "vite": "5.2.11",
     "vite-plugin-favicon2": "1.1.5",
+    "vite-plugin-splash-screen": "0.0.1",
     "vite-tsconfig-paths": "4.3.2",
     "vitest": "1.6.0"
   },
