--- a/client/package.json
+++ b/client/package.json
@@ -30,32 +30,33 @@
     "generate:styled-system": "panda codegen --clean --config ./styled-system/setup/config.ts"
   },
   "dependencies": {
-    "@apollo/client": "3.7.13",
+    "@apollo/client": "3.10.4",
     "@lingui/macro": "4.2.1",
     "@lingui/react": "4.2.1",
     "@loadable/component": "5.15.3",
     "@sentry/browser": "7.50.0",
-    "apollo3-cache-persist": "0.14.1",
+    "apollo3-cache-persist": "0.15.0",
     "date-fns": "2.29.3",
     "framer-motion": "10.12.4",
-    "graphql": "16.5.0",
-    "history": "5.3.0",
+    "graphql": "16.8.1",
     "lodash": "4.17.21",
-    "react": "18.2.0",
-    "react-aria": "3.33.1",
     "react-aria-components": "1.2.1",
+    "react-aria": "3.33.1",
     "react-dom": "18.2.0",
     "react-hot-toast": "2.4.0",
     "react-merge-refs": "1.1.0",
     "react-router-dom": "6.23.1",
     "react-stately": "3.31.1",
-    "react-use": "17.4.0"
+    "react-use": "17.4.0",
+    "react": "18.2.0",
+    "spin-delay": "2.0.0",
+    "use-deep-compare": "1.2.1"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "3.3.1",
-    "@graphql-codegen/typescript": "3.0.4",
-    "@graphql-codegen/typescript-operations": "3.0.4",
-    "@graphql-codegen/typescript-react-apollo": "3.3.7",
+    "@graphql-codegen/cli": "5.0.2",
+    "@graphql-codegen/typescript": "4.0.7",
+    "@graphql-codegen/typescript-operations": "4.2.1",
+    "@graphql-codegen/typescript-react-apollo": "4.3.0",
     "@lingui/cli": "4.2.1",
     "@lingui/vite-plugin": "4.2.1",
     "@optimize-lodash/rollup-plugin": "4.0.3",
@@ -95,7 +96,6 @@
     "npm-run-all": "4.1.5",
     "pg-promise": "10.11.1",
     "prettier": "2.8.8",
-    "rollup-plugin-minify-html-literals": "1.2.6",
     "source-map-explorer": "2.5.3",
     "storybook": "8.1.2",
     "typescript": "5.4.5",
