--- a/client/.prettierrc
+++ b/client/.prettierrc
@@ -1,7 +1,9 @@
 {
   "printWidth": 80,
+  "bracketSpacing": true,
   "trailingComma": "es5",
   "tabWidth": 2,
   "semi": true,
-  "singleQuote": true
+  "singleQuote": true,
+  "arrowParens": "avoid"
 }
