feat(client): update tsconfig options and fix related issues
Applied recommendations from this great tsconfig cheat sheet:
https://www.totaltypescript.com/tsconfig-cheat-sheet

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,26 +1,25 @@
 {
   "compilerOptions": {
     "allowJs": true,
-    "allowSyntheticDefaultImports": true,
     "baseUrl": "./",
-    "downlevelIteration": true,
-    "emitDecoratorMetadata": true,
     "esModuleInterop": true,
-    "experimentalDecorators": true,
-    "forceConsistentCasingInFileNames": true,
+    "target": "ES2022",
     "jsx": "react-jsx",
-    "lib": ["DOM", "DOM.Iterable", "ESNext"],
-    "module": "ESNext",
-    "moduleResolution": "Bundler",
+    "lib": ["ES2022", "DOM", "DOM.Iterable"],
+    "module": "Preserve",
+    "moduleDetection": "force",
+    "isolatedModules": true,
     "noEmit": true,
     "noFallthroughCasesInSwitch": true,
     "noImplicitAny": true,
+    "noImplicitOverride": true,
+    "noUncheckedIndexedAccess": true,
     "resolveJsonModule": true,
     "skipLibCheck": true,
-    "sourceMap": true,
+    "sourceMap": false,
+    "strict": true,
     "strictNullChecks": true,
     "strictPropertyInitialization": false,
-    "target": "ESNext",
     "types": ["vitest/globals"],
     "paths": {
       "~constants/*": ["src/constants/*"],
