--- a/client/package.json
+++ b/client/package.json
@@ -42,15 +42,15 @@
     "framer-motion": "10.12.4",
     "graphql": "16.8.1",
     "lodash": "4.17.21",
-    "react-aria-components": "1.2.1",
+    "react": "18.2.0",
     "react-aria": "3.33.1",
+    "react-aria-components": "1.2.1",
     "react-dom": "18.2.0",
     "react-hot-toast": "2.4.0",
     "react-merge-refs": "1.1.0",
     "react-router-dom": "6.23.1",
     "react-stately": "3.31.1",
-    "react-use": "17.4.0",
-    "react": "18.2.0",
+    "react-use-measure": "2.1.1",
     "spin-delay": "2.0.0",
     "use-deep-compare": "1.2.1"
   },
