--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -29,6 +29,7 @@
       "~graphql": ["src/graphql/index.ts"],
       "~uikit": ["src/components/uikit/index.ts"],
       "~components/*": ["src/components/*"],
+      "~routes/*": ["src/routes/*"],
       "~design-tokens/*": ["styled-system/tokens/*"],
       "~styled-system/*": ["styled-system/generated/*"],
       "~utils/*": ["src/utils/*"],
