--- a/client/package.json
+++ b/client/package.json
@@ -37,6 +37,7 @@
     "@lingui/react": "4.2.1",
     "@loadable/component": "5.15.3",
     "@sentry/browser": "8.7.0",
+    "@wry/equality": "0.5.7",
     "date-fns": "2.29.3",
     "graphql": "16.8.1",
     "lodash": "4.17.21",
@@ -49,8 +50,7 @@
     "react-router-dom": "6.23.1",
     "react-stately": "3.31.1",
     "react-use-measure": "2.1.1",
-    "spin-delay": "2.0.0",
-    "use-deep-compare": "1.2.1"
+    "spin-delay": "2.0.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "5.0.2",
