--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "install-clean": "echo '# Nothing to cleanup'",
     "install-ci": "npm-run-all install-all:shared",
     "install-dev": "echo '# Installing all libraries on host for code editor support. TODO how to minimize as --only=dev affects devDepencies also?' && npm-run-all install-all",
-    "install-all": "npm-run-all -c install-all:admin install-all:client install-all:shared install-all:server install-all:worker install-all:www ",
+    "install-all": "npm-run-all -c install-all:admin install-all:client install-all:shared install-all:server install-all:worker install-all:www taito-host-playwright-install",
     "install-all:admin": "echo admin libs... && cd admin && mkdir -p node_modules && npm install --no-save || echo WARNING: Some libs failed to install",
     "install-all:client": "echo client libs... && cd client && mkdir -p node_modules && npm install --no-save || echo WARNING: Some libs failed to install",
     "install-all:server": "echo server libs... && cd server && mkdir -p node_modules && npm install --no-save || echo WARNING: Some libs failed to install",
@@ -42,9 +42,14 @@
     "test:server": "taito ${taito_options} util test:server:${taito_env}",
     "test:worker": "echo DISABLED taito ${taito_options} util test:worker:${taito_env}",
     "test:www": "echo DISABLED taito ${taito_options} util test:www:${taito_env}",
-    "taito-host-cypress": "npm-run-all taito-host-cypress:client",
-    "taito-host-cypress:client": "cd client && DATABASE_PASSWORD=$test_all_DATABASE_PASSWORD npm-run-all cypress:open",
-    "taito-host-cypress:admin": "cd admin && DATABASE_PASSWORD=$test_all_DATABASE_PASSWORD npm-run-all cypress:open",
+    "test:playwright": "if [ \"$taito_mode\" != 'ci' ]; then npm run taito-host-playwright; else taito ${taito_options} util test:playwright:${taito_env}; fi",
+    "taito-host-playwright-install": "echo playwright libs... && cd playwright && mkdir -p node_modules && npm install --no-save && npx playwright install || echo WARNING: Some libs failed to install",
+    "taito-host-playwright": "npm-run-all taito-host-playwright:client",
+    "taito-host-playwright:client": "cd playwright && TEST_USER_PASSWORD=$test_all_TEST_USER_PASSWORD npm-run-all playwright:test",
+    "taito-host-playwright-debug": "npm-run-all taito-host-playwright-debug:client",
+    "taito-host-playwright-debug:client": "cd playwright && TEST_USER_PASSWORD=$test_all_TEST_USER_PASSWORD npm-run-all playwright:debug",
+    "taito-host-playwright-ui:client": "cd playwright && TEST_USER_PASSWORD=$test_all_TEST_USER_PASSWORD npm-run-all playwright:ui",
+
     "code-check": "docker run --interactive --tty --rm --env CODECLIMATE_CODE=\"$PWD\" --volume \"$PWD\":/code --volume /var/run/docker.sock:/var/run/docker.sock --volume /tmp/cc:/tmp/cc codeclimate/codeclimate engines:install && docker run --interactive --tty --rm --env CODECLIMATE_CODE=\"$PWD\" --volume \"$PWD\":/code --volume /var/run/docker.sock:/var/run/docker.sock --volume /tmp/cc:/tmp/cc codeclimate/codeclimate analyze",
     "taito-host-code-check": "npm-run-all code-check",
     "_dep-check_comment": "TODO how to pass -u argument from dep-check to dep-check:TARGET?",
