feat: add authentication

--- a/server-new/package.json
+++ b/server-new/package.json
@@ -27,11 +27,13 @@
     "@fastify/jwt": "8.0.1",
     "@fastify/multipart": "8.3.0",
     "@fastify/type-provider-typebox": "4.1.0",
+    "@lucia-auth/adapter-drizzle": "1.1.0",
+    "@node-rs/argon2": "1.8.3",
     "@pothos/core": "4.2.0",
+    "@pothos/plugin-scope-auth": "4.1.0",
     "@pothos/plugin-simple-objects": "4.1.0",
     "@sentry/node": "8.26.0",
     "@sinclair/typebox": "0.33.7",
-    "bcrypt": "5.1.1",
     "bunyan": "1.8.15",
     "drizzle-orm": "0.33.0",
     "fastify": "4.28.1",
@@ -39,6 +41,7 @@
     "graphql": "16.9.0",
     "graphql-ws": "5.16.0",
     "ky": "1.7.1",
+    "lucia": "3.2.0",
     "pg": "8.12.0",
     "pg-promise": "11.9.1",
     "query-string": "9.1.0",
