--- a/server-new/package.json
+++ b/server-new/package.json
@@ -13,6 +13,8 @@
     "db:migrate:drop": "drizzle-kit drop",
     "db:migrate:generate": "drizzle-kit generate",
     "db:seed": "tsx ./src/db/seed/index.ts",
+    "graphql:generate": "gql.tada generate output",
+    "graphql:check": "gql.tada check",
     "build:prod": "NODE_ENV=production tsc --build tsconfig.json",
     "start:prod": "NODE_ENV=production npm run build:prod && node build/index.js"
   },
@@ -43,7 +45,6 @@
     "ky": "1.7.1",
     "lucia": "3.2.0",
     "pg": "8.12.0",
-    "pg-promise": "11.9.1",
     "query-string": "9.1.0",
     "uuid": "10.0.0",
     "ws": "8.18.0"
@@ -66,6 +67,8 @@
     "eslint-plugin-n": "17.10.2",
     "eslint-plugin-prettier": "5.1.3",
     "eslint-plugin-promise": "7.1.0",
+    "gql.tada": "1.8.6",
+    "graphql-request": "6.1.0",
     "prettier": "3.3.3",
     "tsx": "4.17.0",
     "typescript": "5.5.4",
