--- a/server-new/tsconfig.json
+++ b/server-new/tsconfig.json
@@ -22,7 +22,14 @@
     "baseUrl": ".",
     "paths": {
       "~/*": ["./src/*"]
-    }
+    },
+    "plugins": [
+      {
+        "name": "gql.tada/ts-plugin",
+        "schema": "http://localhost:9999/api/graphql",
+        "tadaOutputLocation": "./src/test/graphql-test-env.d.ts"
+      }
+    ]
   },
-  "include": ["index.ts", "shared/**/*.ts", "src/**/*.ts", "test/**/*.ts"]
+  "include": ["index.ts", "shared/**/*.ts", "src/**/*.ts"]
 }
