--- a/server/package.json
+++ b/server/package.json
@@ -41,6 +41,7 @@
     "fastify": "4.28.1",
     "fastify-plugin": "4.5.1",
     "graphql": "16.9.0",
+    "graphql-scalars": "1.23.0",
     "graphql-ws": "5.16.0",
     "ky": "1.7.1",
     "lucia": "3.2.0",
