--- a/package.json
+++ b/package.json
@@ -12,8 +12,6 @@
     "install-all:shared": "echo shared libs... && cd shared && mkdir -p node_modules && npm install --no-save || echo WARNING: Some libs failed to install",
     "install-all:worker": "echo worker libs... && cd worker && mkdir -p node_modules && npm install --no-save || echo WARNING: Some libs failed to install",
     "install-all:www": "echo www libs... && cd www && mkdir -p node_modules && npm install --no-save || echo WARNING: Some libs failed to install",
-    "taito-init": "taito -z ${taito_options} init:${taito_env} && npm-run-all import-db-data generate",
-    "taito-init:clean": "taito -z ${taito_options} init:${taito_env} --clean && npm-run-all import-db-data clean:storage generate",
     "import-db-data": "if [ -f ./database/data/${taito_env}.sql ]; then taito ${taito_options} db import:${taito_env} ./database/data/${taito_env}.sql; fi",
     "clean:storage": "if [ ${taito_env} = 'local' ] && [ -d storage ]; then echo Cleaning storage; rm -rf ./storage/bucket/*; rm -rf ./storage/.minio.sys/buckets/bucket/*/; fi",
     "taito-host-uikit": "cd client && npm run uikit:preview",
@@ -24,6 +22,8 @@
     "generate:server": "if [ ${taito_env} = 'local' ] && [ -f ./server/generate.sh ]; then (cd server && ./generate.sh); else echo Nothing to generate; fi",
     "info:local": "yes | taito ${taito_options} secret show:${taito_env}",
     "info": "yes | taito ${taito_options} secret show:${taito_env} basic-auth",
+    "taito-host-init": "taito -z ${taito_options} init:${taito_env} && npm-run-all import-db-data generate && taito db deploy",
+    "taito-host-init:clean": "taito -z ${taito_options} init:${taito_env} --clean && npm-run-all import-db-data clean:storage generate && taito db deploy",
     "taito-host-lint": "echo Running lint locally && npm-run-all -p -c taito-host-lint:admin taito-host-lint:client taito-host-lint:server taito-host-lint:worker taito-host-lint:www ",
     "taito-host-lint:admin": "cd admin && echo DISABLED: lint disabled from admin until updated or removed",
     "taito-host-lint:client": "cd client && npm-run-all lint typecheck",
