--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "generate:server": "if [ ${taito_env} = 'local' ] && [ -f ./server/generate.sh ]; then (cd server && ./generate.sh); else echo Nothing to generate; fi",
     "info:local": "yes | taito ${taito_options} secret show:${taito_env}",
     "info": "yes | taito ${taito_options} secret show:${taito_env} basic-auth",
-    "taito-host-init": "taito -z ${taito_options} init:${taito_env} && npm-run-all import-db-data generate && taito db deploy",
-    "taito-host-init:clean": "taito -z ${taito_options} init:${taito_env} --clean && npm-run-all import-db-data clean:storage generate && taito db deploy",
+    "taito-host-init": "taito -z ${taito_options} init:${taito_env} && taito db deploy && npm-run-all import-db-data generate",
+    "taito-host-init:clean": "taito -z ${taito_options} init:${taito_env} --clean && taito db deploy && npm-run-all import-db-data clean:storage generate ",
     "taito-host-lint": "echo Running lint locally && npm-run-all -p -c taito-host-lint:admin taito-host-lint:client taito-host-lint:server taito-host-lint:worker taito-host-lint:www ",
     "taito-host-lint:admin": "cd admin && echo DISABLED: lint disabled from admin until updated or removed",
     "taito-host-lint:client": "cd client && npm-run-all lint typecheck",
