feat: show easy to remember username on 'taito info'

--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "generate": "npm-run-all generate:server generate:client ",
     "generate:client": "if [ ${taito_env} = 'local' ] && [ -f ./client/generate.sh ]; then (cd client && ./generate.sh); else echo Nothing to generate; fi",
     "generate:server": "if [ ${taito_env} = 'local' ] && [ -f ./server/generate.sh ]; then (cd server && ./generate.sh); else echo Nothing to generate; fi",
-    "info:local": "yes | taito ${taito_options} secret show:${taito_env}",
-    "info": "yes | taito ${taito_options} secret show:${taito_env} basic-auth",
+    "info:local": "yes | printf '\nUsers:\nadmin@test.com / password\nuser@test.com / password\n'",
+    "info": "yes | taito ${taito_options} secret show:${taito_env} basic-auth && npm run info:local",
     "taito-host-init": "taito -z ${taito_options} init:${taito_env} && taito db deploy && npm-run-all import-db-data generate",
     "taito-host-init:clean": "taito -z ${taito_options} init:${taito_env} --clean && taito db deploy && npm-run-all import-db-data clean:storage generate ",
     "taito-host-lint": "echo Running lint locally && npm-run-all -p -c taito-host-lint:admin taito-host-lint:client taito-host-lint:server taito-host-lint:worker taito-host-lint:www ",
