fix: client prod build api url env var

--- a/client/Dockerfile.build
+++ b/client/Dockerfile.build
@@ -43,7 +43,7 @@ ENV BASE_PATH BASE_PATH
 ENV ASSETS_PATH ASSETS_PATH
 ENV ASSETS_DOMAIN ASSETS_DOMAIN
 ENV API_ROOT ''
-ENV API_URL /api/graphql
+ENV API_URL /api
 ENV SENTRY_DSN #sentryDSN
 
 RUN npm run lint
