fix: add --experimental-require-module for prod server
The server has some ESM-only packages which don't work in the
production build as we compile the server app to commonjs.

Node.js has recently introduced a new flag for requiring esm
modules: `--experimental-require-module`.

By using this module when starting the prod node server we get
commonjs/esm interoperability.

--- a/server/Dockerfile.build
+++ b/server/Dockerfile.build
@@ -1,5 +1,5 @@
-ARG BUILDER_IMAGE='node:20.17.0-alpine'
-ARG RUNTIME_IMAGE='node:20.17.0-alpine'
+ARG BUILDER_IMAGE='node:22.8.0-alpine'
+ARG RUNTIME_IMAGE='node:22.8.0-alpine'
 
 # Builder and tester container for production build
 FROM ${BUILDER_IMAGE} as builder
@@ -56,4 +56,4 @@ ENV BASE_PATH /api
 
 USER node
 EXPOSE 8080
-CMD ["node", "./index.js"]
+CMD ["node", "--experimental-require-module", "./index.js"]
