--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,7 @@
     "graphql:generate": "gql.tada generate output",
     "graphql:check": "gql.tada check",
     "build:prod": "NODE_ENV=production tsc --build tsconfig.json && tsc-alias -p tsconfig.json",
-    "start:prod": "NODE_ENV=production npm run build:prod && node build/index.js"
+    "start:prod": "NODE_ENV=production npm run build:prod && node --experimental-require-module build/index.js"
   },
   "dependencies": {
     "@apollo/server": "4.11.0",
