--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,7 @@
     "format:write": "prettier --write './src/**/*.{ts,tsx}'",
     "unit": "echo TODO make this work in container vitest run ./src/**/*.test.{ts,tsx}",
     "unit:coverage": "vitest run ./src/**/*.test.{ts,tsx} --coverage",
-    "test": "echo TODO run tests but not cypress",
-    "cypress:run": "if [ -z ${test_name} ]; then cypress run; else cypress run -s test/integration/**/${test_name}.spec.ts; fi",
-    "cypress:open": "cypress open",
+    "test": "echo TODO run tests",
     "prestart": "npm run generate",
     "prebuild": "NODE_ENV=production npm run generate",
     "start": "vite",
